codegen2/finalproject/sql.grammar.txt
bit_expr -> (simple_expr)
boolean_primary -> (boolean_primary), (comparison_operator), (predicate)
boolean_primary -> (predicate)
comparison_operator -> (EQ)
comparison_operator -> (GT)
count_function -> (COUNT), ((), (expr), ())
count_function -> (COUNT), ((), (opt_all), (*), ())
delim -> (DELIM)
derived_table_list -> (esc_table_ref)
esc_table_ref -> (table_ref)
escape_opt -> (empty)
expr -> (boolean_primary)
expr -> (expr), (AND), (expr)
expr -> (expr), (OR), (expr)
expr_list -> (expr)
function_call -> (count_function)
function_call -> (max_function)
function_call -> (min_function)
function_call -> (other_function)
group_clause -> (empty)
having_clause -> (empty)
join_table_list -> (derived_table_list)
limit_clause -> (LIMIT), (limit_options)
limit_option -> (NUMBER)
limit_options -> (limit_option)
literal -> (NUMBER)
literal -> (STRING)
max_function -> (MAX), ((), (opt_distinct), (expr), ())
min_function -> (MIN), ((), (opt_distinct), (expr), ())
not_opt -> (empty)
opt_all -> (empty)
opt_distinct -> (empty)
opt_index_hints_list -> (empty)
opt_key_definition -> (opt_index_hints_list)
opt_limit_clause -> (empty)
opt_limit_clause -> (limit_clause)
opt_order_clause -> (empty)
opt_order_clause -> (order_clause)
opt_table_alias -> (empty)
order_clause -> (ORDER), (BY), (order_list)
order_dir -> (ASC)
order_dir -> (DESC)
order_dir -> (empty)
order_ident -> (expr)
order_item -> (order_ident), (order_dir)
order_list -> (order_item)
other_function -> (IDENT), ((), (expr_list), ())
predicate -> (bit_expr)
predicate -> (bit_expr), (not_opt), (LIKE), (simple_expr), (escape_opt)
root -> (statements)
select -> (top_level_select_init)
select_alias -> (empty)
select_from -> (FROM), (join_table_list), (where_clause), (group_clause), (having_clause), (opt_order_clause), (opt_limit_clause)
select_init2 -> (select_part2), (union_clause)
select_into -> (select_from)
select_item -> (select_item2), (select_alias)
select_item2 -> (expr)
select_item_list -> (*)
select_item_list -> (select_item)
select_item_list -> (select_item), (), (select_item_list)
select_lock_type -> (empty)
select_options -> (empty)
select_part2 -> (select_options), (select_item_list), (select_into), (select_lock_type)
simple_expr -> ((), (expr_list), ())
simple_expr -> ((), (subquery), ())
simple_expr -> (IDENT)
simple_expr -> (function_call)
simple_expr -> (literal)
statement -> (select)
statements -> (empty)
statements -> (statement), (delim), (statements)
subquery -> (select)
table_factor -> (IDENT), (opt_table_alias), (opt_key_definition)
table_ref -> (table_factor)
top_level_select_init -> (SELECT), (select_init2)
union_clause -> (empty)
where_clause -> (WHERE), (expr)
where_clause -> (empty)
