codegen2/finalproject/lang/sqlp/parser.py
# The contents of this file are subject to the Nymgo License, version 1.0.
# It is forbidden the use of the codes included on this file, even partially,
# for third parties, such as its copy, without express authorization of the
# intelectual property and commercial rights owners. A copy of the license
# may be obtained at http://nymgo.com/source-license. The intelectual
# property and comercial rights of this file and codes belong to Nymgo S.A.
#
# Copyright (c) 2014. All rights reserved.

"""A parser for SQL statements."""

import re
import pprint
import os, sys, re
from my_ply import lex, yacc


def after(l, start):
  s = start[:]
  x = l[:]
  s.reverse()
  x.reverse()
  count = 0
  while len(x) > 0 and s[0] != x[0]:
    count += 1
    del x[0]
  if len(x) == 0:
    return -1
  del s[0]
  while len(x) > 0 and len(s) > 0:
    if s[0] == x[0]:
      del s[0]
    del x[0]
  if len(s) > 0:
    return -1
  return count

class Location(dict):
  _line = None

  def __init__(self, lexer, lineno, lexpos):
    dict.__init__(self)
    self['lineno'] = lineno
    self._lexpos = lexpos
    self._lexdata = lexer.lexdata
    self['file'] = getattr(lexer, 'filename', "<unknown>")

  def __eq__(self, other):
    return self._lexpos == other._lexpos and \
         self['file'] == other['file']

  def resolve(self):
    if self._line:
      return

    startofline = self._lexdata.rfind('\n', 0, self._lexpos) + 1
    endofline = self._lexdata.find('\n', self._lexpos)
    self._line = self._lexdata[startofline:endofline]
    self._colno = self._lexpos - startofline

  def pointerline(self):
    def i():
      for i in xrange(0, self._colno):
        yield " "
      yield "^"

    return "".join(i())

  def __str__(self):
    self.resolve()
    return "%s line %s:%s\n%s\n%s" % (self['file'],
                      self['lineno']==0 and 1 or self['lineno'],
                      self._colno==0 and 1 or self._colno,
                      self._line, self.pointerline())

class SQLError(Exception):
  def __init__(self, message, location, warning=False):
    self.message = message
    self.location = location
    self.warning = warning

  def __str__(self):
    return "%s: %s, %s" % (self.warning and 'warning' or 'error',
                           self.message, self.location)

class SQLParser(object):
  # lex section ------------------------------------------------------------

  # Reserved words
  reserved = {
    'add':'ADD',
    'after':'AFTER',
    'all':'ALL',
    'alter':'ALTER',
    'any':'ANY',
    'as':'AS',
    'asc':'ASC',
    'auto_increment':'AUTO_INCREMENT',
    'avg':'AVG',
    'before':'BEFORE',
    'begin':'BEGIN',
    'between':'BETWEEN',
    'bigint':'BIGINT',
    'bit_and':'BIT_AND',
    'bit_or':'BIT_OR',
    'bit_xor':'BIT_XOR',
    'blob':'BLOB',
    'by':'BY',
    'cascade':'CASCADE',
    'case':'CASE',
    'cast':'CAST',
    'chain':'CHAIN',
    'change':'CHANGE',
    'character':'CHARACTER',
    'char':'CHAR',
    'charset':'CHARSET',
    'close':'CLOSE',
    'collate':'COLLATE',
    'column':'COLUMN',
    'commit':'COMMIT',
    'consistent':'CONSISTENT',
    'constraint':'CONSTRAINT',
    'convert':'CONVERT',
    'count':'COUNT',
    'create':'CREATE',
    'cross':'CROSS',
    'cube':'CUBE',
    'date':'DATE',
    'datetime':'DATETIME',
    'decimal':'DECIMAL',
    'declare':'DECLARE',
    'default':'DEFAULT',
    'delayed':'DELAYED',
    'delete':'DELETE',
    'desc':'DESC',
    'distinct':'DISTINCT',
    'do':'DO',
    'drop':'DROP',
    'dual':'DUAL',
    'duplicate':'DUPLICATE',
    'each':'EACH',
    'else':'ELSE',
    'elseif':'ELSEIF',
    'end':'END',
    'engine':'ENGINE',
    'escape':'ESCAPE',
    'exists':'EXISTS',
    'false':'FALSE',
    'fetch':'FETCH',
    'first':'FIRST',
    'float':'FLOAT',
    'force':'FORCE',
    'for':'FOR',
    'from':'FROM',
    'global':'GLOBAL',
    'group':'GROUP',
    'having':'HAVING',
    'high_priority':'HIGH_PRIORITY',
    'if':'IF',
    'ignore':'IGNORE',
    'index':'INDEX',
    'in':'IN',
    'inner':'INNER',
    'insert':'INSERT',
    'integer':'INTEGER',
    'int':'INT',
    'into':'INTO',
    'is':'IS',
    'iterate':'ITERATE',
    'join':'JOIN',
    'key':'KEY',
    'leave':'LEAVE',
    'left':'LEFT',
    'like':'LIKE',
    'limit':'LIMIT',
    'lock':'LOCK',
    'longblob':'LONGBLOB',
    'longtext':'LONGTEXT',
    'loop':'LOOP',
    'low_priority':'LOW_PRIORITY',
    'max':'MAX',
    'mediumblob':'MEDIUMBLOB',
    'mediumint':'MEDIUMINT',
    'mediumtext':'MEDIUMTEXT',
    'min':'MIN',
    'mode':'MODE',
    'modify':'MODIFY',
    'natural':'NATURAL',
    'next':'NEXT',
    'no':'NO',
    'not':'NOT',
    'null':'NULL',
    'numeric':'NUMERIC',
    'offset':'OFFSET',
    'on':'ON',
    'open':'OPEN',
    'optimize':'OPTIMIZE',
    'order':'ORDER',
    'outer':'OUTER',
    'primary':'PRIMARY',
    'quick':'QUICK',
    'regexp':'REGEXP',
    'release':'RELEASE',
    'rename':'RENAME',
    'repeat':'REPEAT',
    'replace':'REPLACE',
    'restrict':'RESTRICT',
    'return':'RETURN',
    'right':'RIGHT',
    'rollback':'ROLLBACK',
    'rollup':'ROLLUP',
    'row':'ROW',
    'select':'SELECT',
    'session':'SESSION',
    'set':'SET',
    'share':'SHARE',
    'signed':'SIGNED',
    'smallint':'SMALLINT',
    'snapshot':'SNAPSHOT',
    'some':'SOME',
    'sounds':'SOUNDS',
    'start':'START',
    'sum':'SUM',
    'table':'TABLE',
    'temporary':'TEMPORARY',
    'text':'TEXT',
    'then':'THEN',
    'timestamp':'TIMESTAMP',
    'time':'TIME',
    'tinyblob':'TINYBLOB',
    'tinyint':'TINYINT',
    'tinytext':'TINYTEXT',
    'to':'TO',
    'transaction':'TRANSACTION',
    'trigger':'TRIGGER',
    'true':'TRUE',
    'union':'UNION',
    'unique':'UNIQUE',
    'unknown':'UNKNOWN',
    'unsigned':'UNSIGNED',
    'until':'UNTIL',
    'update':'UPDATE',
    'use':'USE',
    'using':'USING',
    'values':'VALUES',
    'value':'VALUE',
    'varchar':'VARCHAR',
    'view':'VIEW',
    'when':'WHEN',
    'where':'WHERE',
    'while':'WHILE',
    'with':'WITH',
    'work':'WORK',
    'xor':'XOR',
    }

  tokens = [
    'DELIMITER',
    'DELIM',
    'NULL_SAFE',
    'OR',
    'AND',
    'LOGICAL_NOT',
    'BITWISE_AND',
    'BITWISE_OR',
    'BITWISE_XOR',
    'PLUS',
    'MINUS',
    'EQ',
    'LT',
    'GT',
    'GE',
    'LE',
    'NE',
    'SHR',
    'SHL',
    'TIMES',
    'DIV',
    'MOD',
    'SET_VAR',
    'COMMENTS',
    'STRING',
    'FLOAT_LIT',
    'NUMBER',
    'IDENT',
    ] + list(reserved.values())

  precedence = (
    ('left', 'OR'),
    ('left', 'AND', 'XOR'),
    ('left', 'BITWISE_OR'),
    ('left', 'BITWISE_XOR'),
    ('left', 'BITWISE_AND'),
    ('left', 'NOT'),
    ('left', 'EQ', 'NE'),
    ('left', 'LT', 'GT', 'LE', 'GE'),
    ('left', 'SHL', 'SHR'),
    ('left', 'PLUS', 'MINUS'),
    ('left', 'TIMES', 'DIV', 'MOD'),
  )

  literals = ',();*@'

  last_tokens = []
  level = 0

  # Completely ignored characters: space, tab and form feed
  t_ignore = ' \t\x0c'

  # Newlines
  def t_NEWLINE(self, t):
    r'\r?\n+'
    t.lexer.lineno += t.value.count("\n")

  t_DELIM = r'[;]'
  t_OR = r'\|\|'
  t_AND = r'&&'
  t_GE = r'>='
  t_LE = r'<='
  t_NE = r'<>|!='
  t_SHR = r'>>'
  t_SHL = r'<<'
  t_TIMES = r'\*'
  t_DIV = r'/'
  t_MOD = r'%'
  t_SET_VAR = r':='
  t_PLUS = r'\+'
  t_MINUS = r'-'
  t_EQ = r'='
  t_LT = r'<'
  t_GT = r'>'
  t_BITWISE_AND = r'&'
  t_BITWISE_OR = r'\|'
  t_BITWISE_XOR = r'^'
  t_NULL_SAFE = r'<=>'
  t_LOGICAL_NOT = r'!'

  # Comments
  def t_COMMENTS(self, t):
    r'/\*(.|[\r\n])*?\*/|--[^\n]*|\#[^\n]*'
    t.lexer.lineno += t.value.count('\n')
    return t

  # Identifiers and reserved words
  def t_FLOAT_LIT(self, t):
    r'(\d+\.\d+([Ee](\+|-)?\d+)?|\d+[Ee][+-]?\d+)'
    t.value = float(t.value)
    return t

  def t_NUMBER(self, t):
    r'-?\d+'
    t.value = int(t.value)
    return t

  def t_STRING(self, t):
    r'"(\\"|""|[^"])*"|\'(\\\'|\'\'|[^\'])*\''
    if t.value[0] == '\'':
      t.value = t.value[1:len(t.value)-1].replace('\'\'','\\\'')
    else:
      t.value = t.value[1:len(t.value)-1].replace('""','"')
    t.lexer.lineno += t.value.count("\n")
    return t

  def t_DELIMITER(self, t):
    r'(?i)DELIMITER[ \t]+(?P<new_delim>[^ \t\n]+)'
    t.value = t.lexer.lexmatch.group('new_delim')
    return t

  def t_IDENT(self, t):
    r'[A-Za-z_][\w_.]*|`(``|[^`])*`'
    if t.value[0] == '`':
      t.value = t.value[1:-1].replace('``', '`')
    elif t.value.upper() in ['AND','OR','DIV','MOD']:
      t.type = t.value.upper()
    else:
      t.type = self.reserved.get(t.value.lower(),'IDENT')
    return t

  def t_error(self, t):
    print("Illegal character %s" % repr(t.value[0]))
    t.lexer.skip(1)

  # yacc section -----------------------------------------------------------

  def p_error(self, t):
    if not t:
      raise SQLError("Syntax Error at end of file. Possibly due to missing semicolon(';'), braces('}') or parens(')')", None)
    else:
      location = Location(self.lexer, t.lineno, t.lexpos)
      raise SQLError("invalid syntax", location)

  # yacc functions ---------------------------------------------------------

  def p_delim(self, p):
    """delim : DELIM
             | ';' """
    pass

  def p_not_opt_empty(self, p):
    """not_opt : """
    p[0] = lambda x: x

  def p_not_opt(self, p):
    """not_opt : NOT
               | LOGICAL_NOT """
    p[0] = lambda x: ('not',x)

  def p_escape_opt_empty(self, p):
    """escape_opt : """
    p[0] = lambda x: x

  def p_escape_opt(self, p):
    """escape_opt : ESCAPE simple_expr """
    p[0] = lambda x: ('escape',x,p[2])

  def p_expr_or(self, p):
    """expr : expr OR expr """
    p[0] = ('or',p[1],p[3])
    #print("expr : expr OR expr ")

  def p_expr_and(self, p):
    """expr : expr AND expr """
    p[0] = ('and',p[1],p[3])
    #print("expr : expr AND expr ")

  def p_expr_xor(self, p):
    """expr : expr XOR expr """
    p[0] = ('xor',p[1],p[3])

  def p_expr_not(self, p):
    """expr : NOT expr """
    p[0] = ('not',p[2])
    #print("expr : NOT expr ")

  def p_true_false_or_unknown1(self, p):
    """true_false_or_unknown : TRUE """
    p[0] = True

  def p_true_false_or_unknown2(self, p):
    """true_false_or_unknown : FALSE """
    p[0] = False

  def p_true_false_or_unknown3(self, p):
    """true_false_or_unknown : UNKNOWN """
    p[0] = 'UNKNOWN'

  def p_expr_boolean_primary_is(self, p):
    """expr : boolean_primary IS not_opt true_false_or_unknown """
    p[0] = ('is',p[1],p[3](p[4]))
    #print("expr : boolean_primary IS not_opt true_false_or_unknown ")

  def p_expr_boolean_primary(self, p):
    """expr : boolean_primary """
    p[0] = p[1]
    #print("expr : boolean_primary ")

  def p_boolean_primary_is(self, p):
    """boolean_primary : boolean_primary IS not_opt NULL """
    p[0] = ('is',p[1],p[3](None))
    #print("boolean_primary : boolean_primary IS not_opt NULL ")

  def p_boolean_primary_imply(self, p):
    """boolean_primary : boolean_primary NULL_SAFE predicate """
    p[0] = ('<=>',p[1],p[3])
    #print("boolean_primary : boolean_primary NULL_SAFE predicate ")

  def p_boolean_primary_op(self, p):
    """boolean_primary : boolean_primary comparison_operator predicate """
    p[0] = (p[2],p[1],p[3])
    #print("boolean_primary : boolean_primary comparison_operator predicate ")

  def p_all_or_any1(self, p):
    """all_or_any : ALL """
    p[0] = 'all'

  def p_all_or_any2(self, p):
    """all_or_any : ANY
                  | SOME """
    p[0] = 'any'

  def p_boolean_primary_all_any(self, p):
    """boolean_primary : boolean_primary comparison_operator all_or_any '(' subquery ')' """
    p[0] = (p[2],p[1],(p[3],p[5]))
    #print("boolean_primary : boolean_primary comparison_operator all_or_any '(' subquery ')' ")

  def p_boolean_primary_pred(self, p):
    """boolean_primary : predicate """
    p[0] = p[1]
    #print("boolean_primary : predicate ")

  def p_comparison_operator(self, p):
    """comparison_operator : EQ
                           | GE
                           | GT
                           | LE
                           | LT
                           | NE """
    p[0] = p[1]

  def p_expr_list_single(self, p):
    """expr_list : expr """
    p[0] = [p[1]]

  def p_expr_list(self, p):
    """expr_list : expr ',' expr_list """
    p[0] = [p[1]] + p[3]

  def p_predicate_in_subquery(self, p):
    """predicate : bit_expr not_opt IN '(' subquery ')' """
    p[0] = p[2](('in',p[1],p[5]))
    #print("predicate : bit_expr not_opt IN '(' subquery ')'")

  def p_predicate_in(self, p):
    """predicate : bit_expr not_opt IN '(' expr_list ')' """
    p[0] = p[2](('in',p[1],p[5]))

  def p_predicate_between(self, p):
    """predicate : bit_expr not_opt BETWEEN bit_expr AND predicate """
    p[0] = p[2](('between',p[1],p[4],p[6]))

  def p_predicate_sounds_like(self, p):
    """predicate : bit_expr SOUNDS LIKE bit_expr """
    p[0] = ('sounds',p[1],p[4])

  def p_predicate_like(self, p):
    """predicate : bit_expr not_opt LIKE simple_expr escape_opt """
    p[0] = p[2](('like',p[1],p[5](p[4])))

  def p_predicate_regexp(self, p):
    """predicate : bit_expr not_opt REGEXP bit_expr """
    p[0] = p[2](('regexp',p[1],p[4]))
    #print("predicate : bit_expr not_opt REGEXP bit_expr ")

  def p_predicate_bit_expr(self, p):
    """predicate : bit_expr """
    p[0] = p[1]
    #print("predicate : bit_expr")

  def p_bit_expr_or(self, p):
    """bit_expr : bit_expr BITWISE_OR bit_expr """
    p[0] = ('|',p[1],p[3])

  def p_bit_expr_and(self, p):
    """bit_expr : bit_expr BITWISE_AND bit_expr """
    p[0] = ('&',p[1],p[3])

  def p_bit_expr_shl(self, p):
    """bit_expr : bit_expr SHL bit_expr """
    p[0] = ('<<',p[1],p[3])

  def p_bit_expr_shr(self, p):
    """bit_expr : bit_expr SHR bit_expr """
    p[0] = ('>>',p[1],p[3])

  def p_bit_expr_plus(self, p):
    """bit_expr : bit_expr PLUS bit_expr """
    p[0] = ('+',p[1],p[3])

  def p_bit_expr_minus(self, p):
    """bit_expr : bit_expr MINUS bit_expr """
    p[0] = ('-',p[1],p[3])

  def p_bit_expr_mult(self, p):
    """bit_expr : bit_expr TIMES bit_expr """
    p[0] = ('*',p[1],p[3])

  def p_bit_expr_div(self, p):
    """bit_expr : bit_expr DIV bit_expr """
    p[0] = ('/',p[1],p[3])

  def p_bit_expr_mod(self, p):
    """bit_expr : bit_expr MOD bit_expr """
    p[0] = ('%',p[1],p[3])

  def p_bit_expr_inv(self, p):
    """bit_expr : bit_expr BITWISE_XOR bit_expr """
    p[0] = ('^',p[1],p[3])

  def p_bit_expr_simple_expr(self, p):
    """bit_expr : simple_expr """
    p[0] = p[1]
    #print("bit_expr : simple_expr")

  def p_literal(self, p):
    """literal : STRING
               | NUMBER
               | FLOAT_LIT """
    if isinstance(p[1], basestring):
      p[0] = ('value',"'" + str(p[1]) + "'")
    else:
      p[0] = ('value',p[1])
    print("literal : STRING\n \t\t NUMBER\n\t\tFLOAT_LIT ")

  def p_simple_expr_literal(self, p):
    """simple_expr : literal """
    p[0] = p[1]
    #print("simple_expr : literal")

  def p_simple_expr_ident(self, p):
    """simple_expr : IDENT """
    p[0] = p[1]
    #print("simple_expr : IDENT ")

  def p_simple_expr_at_ident(self, p):
    """simple_expr : '@' IDENT """
    p[0] = '@{0}'.format(p[2])

  def p_simple_expr_convert(self, p):
    """simple_expr : function_call """
    p[0] = p[1]

  def p_subquery(self, p):
    """subquery : select """
    p[0] = p[1][0]

  def p_simple_expr_subquery(self, p):
    """simple_expr : '(' subquery ')' """
    p[0] = ('(',p[2])

  def p_simple_expr_exists(self, p):
    """simple_expr : EXISTS '(' subquery ')' """
    p[0] = ('exists',p[3])

  def p_simple_expr_paren(self, p):
    """simple_expr : '(' expr_list ')' """
    p[0] = ('(',p[2])

  def p_simple_expr_row(self, p):
    """simple_expr : ROW '(' expr_list ')' """
    p[0] = ('row',p[2])

  def p_convert_function(self, p):
    """convert_function : CONVERT '(' expr USING IDENT ')' """
    p[0] = ('convert',p[3],p[5])

  def p_cast_type_char(self, p):
    """cast_type : character_statement """
    p[0] = p[1]

  def p_cast_type_date(self, p):
    """cast_type : DATE """
    p[0] = {'type':'date'}

  def p_cast_type_datetime(self, p):
    """cast_type : DATETIME """
    p[0] = {'type':'datetime'}

  def p_cast_type_decimal(self, p):
    """cast_type : DECIMAL bidimensional_limit_opt """
    p[0] = dict({'type':'decimal'},**p[2])

  def p_signed_or_unsigned(self, p):
    """signed_or_unsigned : SIGNED """
    p[0] = {}

  def p_signed_or_unsigned_unsigned(self, p):
    """signed_or_unsigned : UNSIGNED """
    p[0] = {'unsigned':True}

  def p_ignore_integer_empty(self, p):
    """ignore_integer : """
    pass

  def p_ignore_integer(self, p):
    """ignore_integer : INTEGER """
    pass

  def p_cast_type_integer(self, p):
    """cast_type : signed_or_unsigned ignore_integer """
    p[0] = dict({'type':'integer'},**p[1])

  def p_cast_type_time(self, p):
    """cast_type : TIME """
    p[0] = {'type':'time'}

  def p_cast_function(self, p):
    """cast_function : CAST '(' expr AS cast_type ')' """
    p[0] = ('cast',p[3],p[5])

  def p_opt_distinct_empty(self, p):
    """opt_distinct : """
    p[0] = lambda x: x

  def p_opt_distinct(self, p):
    """opt_distinct : DISTINCT """
    p[0] = lambda x: ('distinct',x)

  def p_average_function(self, p):
    """average_function : AVG '(' opt_distinct expr ')' """
    p[0] = ('avg',p[3](p[4]))

  def p_bit_function(self, p):
    """bit_function : BIT_AND '(' expr ')'
                    | BIT_OR '(' expr ')'
                    | BIT_XOR '(' expr ')' """
    p[0] = (p[1].lower(),p[3])

  def p_opt_all(self, p):
    """opt_all : ALL
               | """
    pass

  def p_count_function_wild(self, p):
    """count_function : COUNT '(' opt_all '*' ')' """
    p[0] = ('count','*')

  def p_count_function(self, p):
    """count_function : COUNT '(' expr ')' """
    p[0] = ('count',p[3])

  def p_count_function_distinct(self, p):
    """count_function : COUNT '(' DISTINCT expr_list ')' """
    p[0] = ('count',('distinct',p[4]))

  def p_max_function(self, p):
    """max_function : MAX '(' opt_distinct expr ')' """
    p[0] = ('max',p[3](p[4]))

  def p_min_function(self, p):
    """min_function : MIN '(' opt_distinct expr ')' """
    p[0] = ('min',p[3](p[4]))

  def p_sum_function(self, p):
    """sum_function : SUM '(' opt_distinct expr ')' """
    p[0] = ('sum',p[3](p[4]))

  def p_other_function_empty(self, p):
    """other_function : IDENT '(' ')' """
    p[0] = (p[1].lower())

  def p_other_function(self, p):
    """other_function : IDENT '(' expr_list ')' """
    p[0] = tuple([p[1].lower()] + p[3])

  def p_function_call(self, p):
    """function_call : convert_function
                     | cast_function
                     | average_function
                     | bit_function
                     | count_function
                     | max_function
                     | min_function
                     | sum_function
                     | other_function """
    p[0] = p[1]

  def p_ignore_comma(self, p):
    """ignore_comma : ','
                    | """
    pass

  def p_ignore_eq(self, p):
    """ignore_eq : EQ
                 | """
    pass

  def p_ignore_index_or_key(self, p):
    """ignore_index_or_key : KEY
                           | INDEX
                           | """
    pass

  def p_ignore_key(self, p):
    """ignore_key : KEY
                  | """
    pass

  def p_ignore_default(self, p):
    """ignore_default : DEFAULT
                      | """
    pass

  def p_ignore_column(self, p):
    """ignore_column : COLUMN
                     | """
    pass

  def p_ignore_to_or_as(self, p):
    """ignore_to_or_as : TO
                       | AS
                       | """
    pass

  def p_check_index_or_key(self, p):
    """check_index_or_key : INDEX
                          | KEY """
    pass

  def p_constraint_empty(self, p):
    """constraint_opt : """
    p[0] = {}

  def p_constraint(self, p):
    """constraint_opt : CONSTRAINT IDENT """
    p[0] = {'name':p[2]}

  def p_column_name(self, p):
    """column_name : IDENT """
    p[0] = p[1]

  def p_column_names_single(self, p):
    """column_names : column_name """
    p[0] = [p[1]]

  def p_column_names(self, p):
    """column_names : column_name ',' column_names """
    p[0] = [p[1]] + p[3]

  def p_primary_key_statement(self, p):
    """primary_key_statement : constraint_opt PRIMARY KEY '(' column_names ')' """
    if len(p[1]) == 0:
      p[0] = ('primary_key',p[5])
    else:
      p[0] = ('primary_key',p[5],p[1])

  def p_index_statement(self, p):
    """index_statement : INDEX IDENT '(' column_names ')'
                       | KEY IDENT '(' column_names ')' """
    p[0] = ('index',p[4],{'name':p[1]})

  def p_index_name_opt_empty(self, p):
    """index_name_opt : """
    p[0] = {}

  def p_index_name_opt(self, p):
    """index_name_opt : IDENT """
    p[0] = {'name':p[1]}

  def p_unique_statement(self, p):
    """unique_statement : constraint_opt UNIQUE ignore_index_or_key index_name_opt '(' column_names ')' """
    args = dict(p[1],**p[4])
    if len(args) == 0:
      p[0] = ('unique',p[6])
    else:
      p[0] = ('unique',p[6],args)

  def p_col_name(self, p):
    """col_name : IDENT """
    p[0] = p[1]

  def p_integer_type_tinyint(self, p):
    """integer_type : TINYINT """
    p[0] = 'tinyinteger'

  def p_integer_type_smallint(self, p):
    """integer_type : SMALLINT """
    p[0] = 'smallinteger'

  def p_integer_type_mediumint(self, p):
    """integer_type : MEDIUMINT """
    p[0] = 'mediuminteger'

  def p_integer_type_int(self, p):
    """integer_type : INT
                    | INTEGER """
    p[0] = 'integer'

  def p_integer_type_bigint(self, p):
    """integer_type : BIGINT """
    p[0] = 'biginteger'

  def p_double_precision_float(self, p):
    """double_precision_type : FLOAT """
    p[0] = 'float'

  def p_double_precision_decimal(self, p):
    """double_precision_type : DECIMAL """
    p[0] = 'decimal'

  def p_double_precision_numeric(self, p):
    """double_precision_type : NUMERIC """
    p[0] = 'numeric'

  def p_limit_opt_empty(self, p):
    """limit_opt : """
    p[0] = {}

  def p_limit_opt(self, p):
    """limit_opt : limit """
    p[0] = p[1]

  def p_limit(self, p):
    """limit : '(' NUMBER ')' """
    p[0] = {'limit':p[2]}

  def p_bidimensional_limit_opt_empty(self, p):
    """bidimensional_limit_opt : """
    p[0] = {}

  def p_bidimensional_limit_opt(self, p):
    """bidimensional_limit_opt : bidimensional_limit """
    p[0] = p[1]

  def p_bidimensional_limit(self, p):
    """bidimensional_limit : '(' NUMBER ',' NUMBER ')' """
    p[0] = {'precision':p[2],'scale':p[4]}

  def p_charset_statement(self, p):
    """charset_statement : CHARACTER SET IDENT """
    p[0] = {}

  def p_collate_statement(self, p):
    """collate_statement : COLLATE IDENT """
    p[0] = {'collate':p[2]}

  def p_null_null(self, p):
    """null : NULL """
    p[0] = {'null':True}

  def p_null_not_null(self, p):
    """null : NOT NULL """
    p[0] = {'null':False}

  def p_key_unique(self, p):
    """key : UNIQUE ignore_key """
    p[0] = {'unique':True}

  def p_key_primary_key(self, p):
    """key : KEY
           | PRIMARY KEY """
    p[0] = {'primary_key':True}

  def p_auto_increment(self, p):
    """auto_increment : AUTO_INCREMENT """
    p[0] = {'auto_increment':True}

  def p_default(self, p):
    """default : DEFAULT value """
    p[0] = {'default':p[2]}

  def p_value_null(self, p):
    """value : NULL """
    p[0] = None

  def p_value(self, p):
    """value : STRING
             | NUMBER
             | FLOAT_LIT
             | IDENT """
    p[0] = p[1]

  def p_unsigned_opt_empty(self, p):
    """unsigned_opt : """
    p[0] = {}

  def p_unsigned_opt(self, p):
    """unsigned_opt : UNSIGNED """
    p[0] = {'unsigned':True}

  def p_integer_statement(self, p):
    """integer_statement : integer_type limit_opt unsigned_opt """
    result = dict({'type':p[1]},**p[2])
    result.update(p[3])
    if p[1] == 'integer' and 'limit' in p[2] and p[2]['limit'] == 11:
      del result['limit']
    if p[1] == 'tinyinteger' and 'limit' in p[2] and p[2]['limit'] == 1:
      del result['limit']
      result['type'] = 'boolean'
    p[0] = result

  def p_double_precision_statement(self, p):
    """double_precision_statement : double_precision_type bidimensional_limit_opt unsigned_opt """
    result = dict({'type':p[1]},**p[2])
    result.update(p[3])
    p[0] = result

  def p_check_char_or_character(self, p):
    """check_char_or_character : CHAR
                               | CHARACTER """
    pass

  def p_character_statement(self, p):
    """character_statement : check_char_or_character limit_opt """
    p[0] = dict({'type':'character'},**p[2])

  def p_string_statement(self, p):
    """string_statement : VARCHAR limit """
    p[0] = dict({'type':'string'},**p[2])
    if p[0]['limit'] == 255:
      del p[0]['limit']

  def p_text_type(self, p):
    """text_type : TINYTEXT
                 | TEXT
                 | MEDIUMTEXT
                 | LONGTEXT """
    p[0] = p[1].lower()

  def p_text_statement(self, p):
    """text_statement : text_type """
    p[0] = {'type':p[1]}

  def p_simple_statement(self, p):
    """simple_statement : DATE
                         | TIME
                         | TIMESTAMP
                         | DATETIME """
    p[0] = {'type':p[1].lower()}

  def p_binary_statement_tinyblob(self, p):
    """binary_statement : TINYBLOB """
    p[0] = {'type':'tinybinary'}

  def p_binary_statement_blob(self, p):
    """binary_statement : BLOB """
    p[0] = {'type':'binary'}

  def p_binary_statement_mediumblob(self, p):
    """binary_statement : MEDIUMBLOB """
    p[0] = {'type':'mediumbinary'}

  def p_binary_statement_longblob(self, p):
    """binary_statement : LONGBLOB """
    p[0] = {'type':'longbinary'}

  def p_data_type(self, p):
    """data_type : integer_statement
                 | double_precision_statement
                 | character_statement
                 | string_statement
                 | text_statement
                 | simple_statement
                 | binary_statement """
    p[0] = p[1]

  def p_column_option(self, p):
    """column_option : null
                     | default
                     | auto_increment
                     | key
                     | charset_statement
                     | collate_statement """
    p[0] = p[1]

  def p_column_options_empty(self, p):
    """column_options : """
    p[0] = {}

  def p_column_options(self, p):
    """column_options : column_option column_options """
    p[0] = dict(p[1],**p[2])

  def p_column_statement(self, p):
    """column_statement : data_type column_options """
    p[0] = dict(p[1],**p[2])

  def p_create_statement_column(self, p):
    """create_statement : col_name column_statement """
    t = p[2].pop('type')
    if len(p[2]) > 0:
      p[0] = ('column',p[1],t,p[2])
    else:
      p[0] = ('column',p[1],t)

  def p_create_statement(self, p):
    """create_statement : primary_key_statement
                        | index_statement
                        | unique_statement """
    p[0] = p[1]

  def p_create_statements_single(self, p):
    """create_statements : create_statement """
    p[0] = [p[1]]

  def p_create_statements(self, p):
    """create_statements : create_statement ',' create_statements """
    p[0] = [p[1]] + p[3]

  def p_table_option_engine(self, p):
    """table_option : ENGINE ignore_eq IDENT"""
    p[0] = ('engine',p[3])

  def p_table_option_auto_increment(self, p):
    """table_option : AUTO_INCREMENT ignore_eq NUMBER """
    p[0] = ('auto_increment',p[3])

  def p_table_option_charset_1(self, p):
    """table_option : ignore_default CHARACTER SET ignore_eq IDENT """
    p[0] = ('charset',p[5])

  def p_table_option_charset_2(self, p):
    """table_option : ignore_default CHARSET ignore_eq IDENT """
    p[0] = ('charset',p[4])

  def p_table_option_collate(self, p):
    """table_option : ignore_default COLLATE ignore_eq IDENT """
    p[0] = ('collate',p[4])

  def p_table_options_opt_empty(self, p):
    """table_options_opt : """
    p[0] = []

  def p_table_options_opt(self, p):
    """table_options_opt : table_options """
    p[0] = p[1]

  def p_table_options_single(self, p):
    """table_options : table_option """
    p[0] = [p[1]]

  def p_table_options(self, p):
    """table_options : table_option ignore_comma table_options """
    p[0] = [p[1]] + p[3]

  def p_if_not_exists_empty(self, p):
    """if_not_exists : """
    p[0] = {}

  def p_if_not_exists(self, p):
    """if_not_exists : IF NOT EXISTS """
    p[0] = {'if_not_exists':True}
